fix: swagger doc and some minor changes on user and news workflow
