# src/swagger.json
@@ -66,18 +66,31 @@
         }
       }
     },
-    "/user": {
-      "get": {
-        "summary": "Search all users",
-        "description": "Route responsible for fetching all users",
+    "/user/check-username": {
+      "post": {
+        "summary": "Checks if the username is available, returns boolean",
+        "description": "Route responsible for checking if the username is available, returns true if its available and false if not",
         "tags": ["User"],
-        "security": [{ "bearerAuth": [] }],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Comment"
+              },
+              "examples": {
+                "Username": {
+                  "value": {
+                    "username": "jhondoe123456"
+                  }
+                }
+              }
+            }
+          }
+        },
+        
         "responses": {
           "500": {
             "description": "Internal Server Error"
-          },
-          "401": {
-            "description": "Unauthorized"
           },
           "400": {
             "description": "Not Found"
@@ -86,10 +99,10 @@
             "description": "OK",
             "content": {
               "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/User"
+                "respose": {
+                  "type": "object",
+                  "example": {
+                    "isAvailable": "true"
                   }
                 }
               }
@@ -98,7 +111,52 @@
         }
       }
     },
-    "/user/findById/{id}": {
+    "/user/check-email": {
+      "post": {
+        "summary": "Checks if the email is available, returns boolean",
+        "description": "Route responsible for checking if the email is available, returns true if its available and false if not",
+        "tags": ["User"],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Comment"
+              },
+              "examples": {
+                "Email": {
+                  "value": {
+                    "email": "jhondoe123456@kmail.com"
+                  }
+                }
+              }
+            }
+          }
+        },
+        
+        "responses": {
+          "500": {
+            "description": "Internal Server Error"
+          },
+          "400": {
+            "description": "Not Found"
+          },
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "respose": {
+                  "type": "object",
+                  "example": {
+                    "isAvailable": "true"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/user/find-by-id/{id}": {
       "get": {
         "summary": "Search user by id",
         "description": "Route responsible for searching for user by id",
@@ -137,7 +195,46 @@
         }
       }
     },
-    "/user/update/{id}": {
+    "/user/find-by-username/{username}": {
+      "get": {
+        "summary": "Search user by username",
+        "description": "Route responsible for searching for user by username",
+        "tags": ["User"],
+        "security": [{ "bearerAuth": [] }],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "username",
+            "type": "string",
+            "description": "username",
+            "required": true
+          }
+        ],
+        "responses": {
+          "500": {
+            "description": "Internal Server Error"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "400": {
+            "description": "Not Found"
+          },
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/user/{id}/update": {
       "patch": {
         "summary": "Update user by id",
         "description": "Route responsible for finding the user by id, and updating the user registration fields",
@@ -227,7 +324,7 @@
         }
       }
     },
-    "/news/create": {
+    "/news/add": {
       "post": {
         "summary": "post News",
         "description": "Route responsible for posting news",
@@ -597,7 +694,7 @@
               "examples": {
                 "Comment": {
                   "value": {
-                    "message": "the world is yours."
+                    "comment": "the world is yours."
                   }
                 }
               }
